--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TheProject</string>
+    <string name="API_KEY">AIzaSyA7ClILkGBgqx83dpeNXWivPfK2sXMJtkY</string>
     <string name="IncomesFileName">incomes.json</string>
     <string name="OutcomesFileName">outcomes.json</string>
 
