--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="Category">Category</string>
     <string name="Amount">Amount</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="submit_button">Submit</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_drawer">DrawerActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
